--- a/MyProject/covid/templates/base.html
+++ b/MyProject/covid/templates/base.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="{% url 'index' %}">Global Statistics<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#githublink">
+              <a class="nav-link" href="https://github.com/tiny-toss/covid-19-tracker">
                 <i class="fab fa-github-alt"></i>  GitHub
               </a>
             </li>
