--- a/MyProject/covid/templates/base.html
+++ b/MyProject/covid/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" class="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f1b887a66b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{%  static 'style.css' %}" class="stylesheet">
+    <link rel="stylesheet" href="{%  static 'style/style.css' %}" class="stylesheet">
     {% block heade %}{% endblock %}
 </head>
 <body class="text-center">
@@ -27,7 +27,7 @@
               <a class="nav-link" href="{% url 'index' %}">Global Statistics<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/tiny-toss/covid-19-tracker">
+              <a class="nav-link" href="https://github.com/tiny-toss/covid-pandemic-tracker">
                 <i class="fab fa-github-alt"></i>  GitHub
               </a>
             </li>
